--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,6 +7,7 @@ body{
 .about_me_section{
   height:100vh;
   display:flex;
+  flex-direction: column;
   background: linear-gradient(180deg, #222F3E 0%, #211E1E 100%);;
 }
 .nav_bar{
@@ -20,7 +21,7 @@ body{
   justify-content: space-around;
   align-items: center;
   width:30vw;
-  height: 7.4vh;
+  height:50px;
   background: #211E1E;
   border: 1px solid #413E3E;
   box-shadow: 9px 6px 32.9px rgba(16, 101, 228, 0.25);
@@ -31,34 +32,59 @@ body{
 a{
   text-decoration: none;
   color:#1065E4;
+  font-family: "M PLUS 1p", sans-serif;
+  transition: .2s;
 }
-.photo{
-  display:flex;
-  background:blue;
-  height:20vh;
-  width:20vh;
-  border-radius: 50%;
-  margin-inline:auto;
-  margin-top:100px;
-  
+a:hover{
+  color:#08aef5;
+  font-size: 1.2rem;
+  transition: .2s;
 }
+a:focus{
+  color:#08f5d5;
+}
+
 img{
   border-radius: 50%;
-  
+  margin-inline:auto;
+  margin-top:80px;
 }
+
+p{
+  color:white;
+  font-family: "M PLUS 1p", sans-serif;
+  font-weight: 400;
+  font-size:1.5rem;
+  font-style: normal;
+  margin-inline:20%;
+  text-align:center
+}
+h1{
+  font-family: "M PLUS 1p", sans-serif;
+  text-align: center;
+  color:#1065E4
+}
+/* max tablet width */
+@media screen and (max-width:1024px)
+{
+  .nav_bar{
+    width:500px;
+}
+  p{
+    font-size:1rem;
+  }
+}
+/* max phone width */
 @media screen and (max-width:430px)
 {
   .nav_bar{
   width:100vw;
-}
-.photo{
-  display:flex;
-  background:blue;
-  height:20vh;
-  width:20vh;
-  border-radius: 50%;
-  margin-inline:auto;
-  margin-top:20%;
+  border-radius:0px;
+  top:0;
   
 }
+  p{
+    font-size:.9rem;
+  }
 }
+/* minimum browser width */
